// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t0.1] get --key ALLOWED_KEY (human readable) then: stdout matches snapshot 1`] = `
"
🔐 rhachet/keyrack
   └─ testorg.test.ALLOWED_KEY
      ├─ vault: os.direct
      ├─ mech: REPLICA
      └─ status: granted 🔑
done. 1 granted.

"
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t0] get --key ALLOWED_KEY (in allowlist, on host) then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "allowed-key-value-123",
    },
    "org": "testorg",
    "slug": "testorg.test.ALLOWED_KEY",
    "source": {
      "mech": "REPLICA",
      "vault": "os.direct",
    },
  },
  "status": "granted",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t1.1] get --key SECRET_KEY (human readable) then: stdout matches snapshot 1`] = `
"
🔐 rhachet/keyrack
   └─ testorg.test.SECRET_KEY
      └─ status: absent 🫧
         └─ fix: add 'testorg.test.SECRET_KEY' to .agent/keyrack.yml
done. 1 absent.

"
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t1] get --key SECRET_KEY (on host but NOT in allowlist) then: stdout matches snapshot 1`] = `
{
  "fix": "add 'testorg.test.SECRET_KEY' to .agent/keyrack.yml",
  "message": "key 'testorg.test.SECRET_KEY' not found in repo manifest",
  "slug": "testorg.test.SECRET_KEY",
  "status": "absent",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t2] get --key NONEXISTENT_KEY (not in allowlist, not on host) then: stdout matches snapshot 1`] = `
{
  "fix": "add 'testorg.test.NONEXISTENT_KEY' to .agent/keyrack.yml",
  "message": "key 'testorg.test.NONEXISTENT_KEY' not found in repo manifest",
  "slug": "testorg.test.NONEXISTENT_KEY",
  "status": "absent",
}
`;

exports[`keyrack allowlist given: [case1] repo with allowlist (keyrack.yml) that excludes a key configured on host when: [t3] get --for repo then: stdout matches snapshot 1`] = `
[
  {
    "grant": {
      "env": "test",
      "key": {
        "grade": {
          "duration": "permanent",
          "protection": "plaintext",
        },
        "secret": "allowed-key-value-123",
      },
      "org": "testorg",
      "slug": "testorg.test.ALLOWED_KEY",
      "source": {
        "mech": "REPLICA",
        "vault": "os.direct",
      },
    },
    "status": "granted",
  },
]
`;

exports[`keyrack allowlist given: [case2] env var exists but key not in allowlist when: [t0] get --key SECRET_FROM_ENV with env var set then: stdout matches snapshot 1`] = `
{
  "grant": {
    "env": "test",
    "key": {
      "grade": {
        "duration": "permanent",
        "protection": "plaintext",
      },
      "secret": "secret-env-value-789",
    },
    "org": "testorg",
    "slug": "testorg.test.SECRET_FROM_ENV",
    "source": {
      "mech": "PERMANENT_VIA_REPLICA",
      "vault": "os.envvar",
    },
  },
  "status": "granted",
}
`;
